// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kirinus() Messages if everything is fine 1`] = `
Array [
  "
## Changes

### :zap: Features

- \`commit 1\`

### :wrench: Fixes

- \`commit 2\`
- \`commit 4\`

### :construction_worker: Maintenance

- \`commit 3\`

### :books: Documentation

- \`commit 4\`

### :question: Uncategorized

I was unable to render the category of these changes.
Consider using a scope for more grained results.

- \`no category 1\`
- \`no category 2\`

## Files

- \`file1.md\`
- \`file2.js\`
  ",
]
`;

exports[`kirinus() Removes duplicates from same commit type 1`] = `
Array [
  "
## Changes

### :zap: Features

- \`commit 1\`

### :wrench: Fixes

- \`commit 2\`
- \`commit 4\`

### :construction_worker: Maintenance

- \`commit 3\`

### :books: Documentation

- \`commit 4\`

### :nail_care: Style

- \`format files\`

## Files

- \`file1.md\`
- \`file2.js\`
  ",
]
`;
